sql/hive/src/test/resources/ql/src/test/queries/negative/unknown_column1.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT '1234', src.dummycol WHERE src.key < 100
